// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News should filter results based on category query and asset 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
          disabled=""
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 gOOUQB"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-4xl"
                data-testid="header__title"
              >
                Blockchain News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    height="27"
                    width="100"
                  >
                    blockfolio.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 dgHHTG"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-8"
          >
            <div
              class="flex-none w-4/6"
            >
              <div
                class="space-y-6"
              >
                <div
                  data-testid="NewsCard"
                >
                  <div
                    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer bg-theme-background"
                    data-testid="Card"
                  >
                    <div
                      class="flex flex-col p-4 space-y-8 bg-theme-background"
                    >
                      <div
                        class="flex justify-between w-full"
                      >
                        <div
                          class="flex items-center space-x-4"
                        >
                          <div
                            class="Circle-uw7h4j-0 hvqrfp border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
                            data-testid="NetworkIcon__placeholder"
                          />
                          <div>
                            <h4
                              class="text-lg font-semibold"
                              data-testid="NewsCard__asset-undefined"
                            />
                            <div
                              class="flex items-center space-x-4"
                            >
                              <p
                                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                data-testid="NewsCard__author"
                              >
                                Travis Walker, Co-Founder
                              </p>
                              <div
                                class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
                                type="vertical"
                              />
                              <p
                                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                data-testid="NewsCard__date-created"
                              >
                                <span
                                  data-testid="timeago"
                                >
                                  A few seconds ago
                                </span>
                              </p>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex flex-col justify-end"
                        >
                          <div
                            class="Label-sc-1tj9hzr-0 ftOOah"
                            color="warning"
                          >
                            <span
                              class="text-sm"
                              data-testid="NewsCard__category"
                            >
                              #Technical
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
                        type="horizontal"
                      />
                      <div
                        class="whitespace-pre-line text-theme-secondary-text"
                        data-testid="NewsCard__content"
                      >
                        Major League Hacking is having another virtual workshop showcasing ARK technology on August 19th 2020. Anyone can join at 5PM EDT to Build a Blockchain Taco Shop with ARK!

                        <a
                          class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                          data-testid="Link"
                          rel="noopener noreferrer"
                          to="https://organize.mlh.io/participants/events/3858-build-a-blockchain-taco-shop-with-ark-io"
                        >
                          <span
                            class="underline-dotted"
                          >
                            https://organize.mlh.io/participants/events/3858-build-a-blockchain-taco-shop-with-ark-io
                          </span>
                          <div
                            class="sc-bdfBwQ fPrsah flex-shrink-0 ml-2 text-sm"
                            data-testid="Link__external"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              redirect.svg
                            </svg>
                          </div>
                        </a>
                      </div>
                    </div>
                    <div
                      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="my-10"
              >
                <div
                  class="relative"
                >
                  <div
                    class="flex absolute top-0 right-4 text-center rounded-b-xl bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <span
                      class="px-2 pt-1 pb-2 text-xs font-semibold text-theme-primary-600"
                    >
                      Ad
                    </span>
                  </div>
                  <img
                    alt="Blockfolio Banner"
                    class="w-full rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                    src="blockfolio-banner.png"
                  />
                  <div
                    class="absolute left-10 top-16"
                  >
                    <div
                      class="flex flex-col space-y-5 text-white"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                        data-testid="Link"
                        rel="noopener noreferrer"
                        to="https://blockfolio.com/"
                      >
                        <span
                          class="underline-dotted"
                        >
                          <svg
                            class="-mx-8 text-white"
                            height="47"
                            width="238"
                          >
                            blockfolio.svg
                          </svg>
                        </span>
                      </a>
                      <p
                        class="w-3/4 text-lg font-medium"
                      >
                        The world's most popular Bitcoin & cryptocurrency portfolio tracker. 100% free.
                      </p>
                    </div>
                    <div
                      class="flex mt-12 space-x-2"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                        data-testid="Link"
                        rel="noopener noreferrer"
                        to="https://itunes.apple.com/us/app/blockfolio-bitcoin-altcoin/id1095564685?mt=8"
                      >
                        <span
                          class="underline-dotted"
                        >
                          <svg
                            class="w-32 h-10 b-0"
                          >
                            download-app-store.svg
                          </svg>
                        </span>
                      </a>
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                        data-testid="Link"
                        rel="noopener noreferrer"
                        to="https://play.google.com/store/apps/details?id=com.blockfolio.blockfolio&hl=en_US"
                      >
                        <span
                          class="underline-dotted"
                        >
                          <svg
                            class="w-32 h-10"
                          >
                            download-google-play.svg
                          </svg>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-center w-full"
              />
            </div>
            <div
              class="flex-none w-2/6"
            >
              <div
                class="p-8 rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                data-testid="NewsOptions"
              >
                <div
                  class="flex flex-col space-y-8"
                >
                  <div
                    class="flex justify-between items-center py-4 px-2 rounded-md shadow-xl"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures border-none shadow-none NewsOptions__search"
                      data-testid="NewsOptions__search"
                      maxlength="32"
                      placeholder="Search"
                    />
                    <div
                      class="sc-bdfBwQ iNulIV mr-4 text-theme-primary-300 dark:text-theme-secondary-600"
                      height="18"
                      width="18"
                    >
                      <svg>
                        search.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                    type="horizontal"
                  />
                  <div
                    class="flex flex-col space-y-3"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Category
                      </h5>
                      <button
                        class="text-xs font-semibold focus:outline-none text-theme-secondary-800"
                      >
                        Select All
                      </button>
                    </div>
                    <p
                      class="text-sm text-theme-secondary-500"
                    >
                      Select your categories
                    </p>
                    <div
                      class="flex flex-wrap -mx-1"
                    >
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Technical"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Technical
                        </div>
                      </label>
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Marketing"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Marketing
                        </div>
                      </label>
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Community"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Community
                        </div>
                      </label>
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Emergency"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Emergency
                        </div>
                      </label>
                    </div>
                  </div>
                  <div
                    class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                    type="horizontal"
                  />
                  <div
                    class="flex flex-col space-y-3"
                  >
                    <h5
                      class="font-semibold"
                    >
                      Filter Assets
                    </h5>
                    <p
                      class="text-sm text-theme-secondary-500"
                    >
                      Your current selections
                    </p>
                    <div
                      class="pb-4"
                    >
                      <div
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="inline-block"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__ARK"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdfBwQ fdfkzt"
                                  height="12"
                                  width="12"
                                >
                                  <svg>
                                    checkmark.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__ETH"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  eth.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__BTC"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  btc.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__LSK"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lsk.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <button
                      class="Button__StyledButton-mdtvtf-0 iUSBMV w-full"
                      data-testid="NewsOptions__submit"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Update Filter
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`News should filter results based on category query and asset 2`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
          disabled=""
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 gOOUQB"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-4xl"
                data-testid="header__title"
              >
                Blockchain News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    height="27"
                    width="100"
                  >
                    blockfolio.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 dgHHTG"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-8"
          >
            <div
              class="flex-none w-4/6"
            >
              <div
                class="space-y-6"
              >
                <div
                  data-testid="NewsCard"
                >
                  <div
                    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer bg-theme-background"
                    data-testid="Card"
                  >
                    <div
                      class="flex flex-col p-4 space-y-8 bg-theme-background"
                    >
                      <div
                        class="flex justify-between w-full"
                      >
                        <div
                          class="flex items-center space-x-4"
                        >
                          <div
                            aria-label="ARK"
                            class="Circle-uw7h4j-0 hvqrfp border-theme-danger-200 text-theme-danger-400"
                            data-testid="NetworkIcon-ARK-ark.mainnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div>
                            <h4
                              class="text-lg font-semibold"
                              data-testid="NewsCard__asset-ARK Ecosystem"
                            >
                              ARK Ecosystem
                            </h4>
                            <div
                              class="flex items-center space-x-4"
                            >
                              <p
                                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                data-testid="NewsCard__author"
                              >
                                Travis Walker, Co-Founder
                              </p>
                              <div
                                class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
                                type="vertical"
                              />
                              <p
                                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                data-testid="NewsCard__date-created"
                              >
                                <span
                                  data-testid="timeago"
                                >
                                  A few seconds ago
                                </span>
                              </p>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex flex-col justify-end"
                        >
                          <div
                            class="Label-sc-1tj9hzr-0 ftOOah"
                            color="warning"
                          >
                            <span
                              class="text-sm"
                              data-testid="NewsCard__category"
                            >
                              #Technical
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
                        type="horizontal"
                      />
                      <div
                        class="whitespace-pre-line text-theme-secondary-text"
                        data-testid="NewsCard__content"
                      >
                        Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
                        <a
                          class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                          data-testid="Link"
                          rel="noopener noreferrer"
                          to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
                        >
                          <span
                            class="underline-dotted"
                          >
                            https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
                          </span>
                          <div
                            class="sc-bdfBwQ fPrsah flex-shrink-0 ml-2 text-sm"
                            data-testid="Link__external"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              redirect.svg
                            </svg>
                          </div>
                        </a>
                      </div>
                    </div>
                    <div
                      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                    />
                  </div>
                </div>
              </div>
              <div
                class="my-10"
              >
                <div
                  class="relative"
                >
                  <div
                    class="flex absolute top-0 right-4 text-center rounded-b-xl bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <span
                      class="px-2 pt-1 pb-2 text-xs font-semibold text-theme-primary-600"
                    >
                      Ad
                    </span>
                  </div>
                  <img
                    alt="Blockfolio Banner"
                    class="w-full rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                    src="blockfolio-banner.png"
                  />
                  <div
                    class="absolute left-10 top-16"
                  >
                    <div
                      class="flex flex-col space-y-5 text-white"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                        data-testid="Link"
                        rel="noopener noreferrer"
                        to="https://blockfolio.com/"
                      >
                        <span
                          class="underline-dotted"
                        >
                          <svg
                            class="-mx-8 text-white"
                            height="47"
                            width="238"
                          >
                            blockfolio.svg
                          </svg>
                        </span>
                      </a>
                      <p
                        class="w-3/4 text-lg font-medium"
                      >
                        The world's most popular Bitcoin & cryptocurrency portfolio tracker. 100% free.
                      </p>
                    </div>
                    <div
                      class="flex mt-12 space-x-2"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                        data-testid="Link"
                        rel="noopener noreferrer"
                        to="https://itunes.apple.com/us/app/blockfolio-bitcoin-altcoin/id1095564685?mt=8"
                      >
                        <span
                          class="underline-dotted"
                        >
                          <svg
                            class="w-32 h-10 b-0"
                          >
                            download-app-store.svg
                          </svg>
                        </span>
                      </a>
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
                        data-testid="Link"
                        rel="noopener noreferrer"
                        to="https://play.google.com/store/apps/details?id=com.blockfolio.blockfolio&hl=en_US"
                      >
                        <span
                          class="underline-dotted"
                        >
                          <svg
                            class="w-32 h-10"
                          >
                            download-google-play.svg
                          </svg>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-center w-full"
              >
                <div
                  class="Pagination__Wrapper-x7juhx-0 klvluR"
                  data-testid="Pagination"
                >
                  <div
                    class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy current-page"
                    >
                      1
                    </div>
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
                    >
                      2
                    </div>
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
                    >
                      3
                    </div>
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
                    >
                      4
                    </div>
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
                    >
                      5
                    </div>
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
                    >
                      6
                    </div>
                    <div
                      class="Pagination__PaginationButtonStyled-x7juhx-1 jqbPMy"
                    >
                      7
                    </div>
                    <div
                      class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 ftyWKb"
                      data-testid="PaginationSearchButton"
                    >
                      <span
                        data-testid="PaginationSearch__toggle"
                      >
                         
                        <span>
                          ...
                        </span>
                         
                      </span>
                    </div>
                  </div>
                  <button
                    class="Button__StyledButton-mdtvtf-0 iUSBMV"
                    data-testid="Pagination__next"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Next
                      <div
                        class="sc-bdfBwQ fdfkzt ml-2"
                        height="12"
                        width="12"
                      >
                        <svg>
                          forward.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                  <button
                    class="Button__StyledButton-mdtvtf-0 iUSBMV"
                    data-testid="Pagination__last"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ fdfkzt"
                        height="12"
                        width="12"
                      >
                        <svg>
                          pagination-last.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="flex-none w-2/6"
            >
              <div
                class="p-8 rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                data-testid="NewsOptions"
              >
                <div
                  class="flex flex-col space-y-8"
                >
                  <div
                    class="flex justify-between items-center py-4 px-2 rounded-md shadow-xl"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures border-none shadow-none NewsOptions__search"
                      data-testid="NewsOptions__search"
                      maxlength="32"
                      placeholder="Search"
                    />
                    <div
                      class="sc-bdfBwQ iNulIV mr-4 text-theme-primary-300 dark:text-theme-secondary-600"
                      height="18"
                      width="18"
                    >
                      <svg>
                        search.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                    type="horizontal"
                  />
                  <div
                    class="flex flex-col space-y-3"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Category
                      </h5>
                    </div>
                    <p
                      class="text-sm text-theme-secondary-500"
                    >
                      Select your categories
                    </p>
                    <div
                      class="flex flex-wrap -mx-1"
                    >
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Technical"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Technical
                        </div>
                      </label>
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Marketing"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Marketing
                        </div>
                      </label>
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Community"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Community
                        </div>
                      </label>
                      <label
                        class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                        data-testid="NewsOptions__category-Emergency"
                      >
                        <input
                          checked=""
                          class="SelectCategory__Input-k7qbth-0 jXZdTM"
                          data-testid="SelectCategory__undefined"
                          type="checkbox"
                          value=""
                        />
                        <div
                          class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                        >
                          #Emergency
                        </div>
                      </label>
                    </div>
                  </div>
                  <div
                    class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                    type="horizontal"
                  />
                  <div
                    class="flex flex-col space-y-3"
                  >
                    <h5
                      class="font-semibold"
                    >
                      Filter Assets
                    </h5>
                    <p
                      class="text-sm text-theme-secondary-500"
                    >
                      Your current selections
                    </p>
                    <div
                      class="pb-4"
                    >
                      <div
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="inline-block"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__ARK"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-success-500 text-theme-success-500"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdfBwQ fdfkzt"
                                  height="12"
                                  width="12"
                                >
                                  <svg>
                                    checkmark.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__ETH"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  eth.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__BTC"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  btc.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block mr-5 cursor-pointer"
                            data-testid="NetworkOption__LSK"
                          >
                            <div
                              class="Circle-uw7h4j-0 JkqUV relative border-theme-secondary-300 dark:border-theme-secondary-800 text-theme-secondary-300"
                            >
                              <div
                                class="sc-bdfBwQ iyevwF"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lsk.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 kWIvIj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                    <button
                      class="Button__StyledButton-mdtvtf-0 iUSBMV w-full"
                      data-testid="NewsOptions__submit"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        Update Filter
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
